--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,6 +46,12 @@
         	android:name=".CreateEventActivity"
          	android:label="Create An Event"
          	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+         
+         <activity
+        	android:name=".ParticipantListingActivity"
+         	android:label="Select participants"
+         	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+        
         
          <activity
         	android:name=".EthanActivity"
