--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -39,6 +39,10 @@
          	android:label="FriendsListActivityLabel"
          	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
          <activity
+        	android:name=".ProfileActivity"
+         	android:label="ProfileActivityLabel"
+         	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+         <activity
         	android:name=".DialogBoxActivity"
          	android:label="Example Dialog Box"/>
          
