--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:label="@string/app_name" >
         <activity
             android:name=".GDDiscoverMeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +28,9 @@
         <uses-library android:name="com.google.android.maps"  />
 	
         
-        	<activity android:name=".MapTestActivity" android:label="HelloGmaps"
-     android:theme="@android:style/Theme.NoTitleBar"/>
+        	<activity android:name=".MapTestActivity" 
+        	    android:label="HelloGmaps"
+     			android:theme="@android:style/Theme.NoTitleBar"/>
         
         <activity
         	android:name=".EventsActivity"
@@ -37,11 +39,11 @@
          <activity
         	android:name=".PopupListActivity"
          	android:label="FriendsListActivityLabel"
-         	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
          <activity
         	android:name=".ProfileActivity"
          	android:label="ProfileActivityLabel"
-         	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
          <activity
         	android:name=".DialogBoxActivity"
          	android:label="Example Dialog Box"/>
@@ -49,12 +51,12 @@
          <activity
         	android:name=".CreateEventActivity"
          	android:label="Create An Event"
-         	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
          
          <activity
         	android:name=".ParticipantListingActivity"
          	android:label="Select participants"
-         	android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
         
         
          <activity
