--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -17,7 +17,9 @@
         <activity
             android:name=".GDDiscoverMeActivity"
             android:label="@string/app_name" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:screenOrientation="portrait">
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
