--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -45,11 +45,13 @@
          <activity
         	android:name=".HomepageActivity"
          	android:label="HomepageActivityLabel"
-         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"
+         	android:screenOrientation="portrait"/>
          <activity
         	android:name=".ProfileActivity"
          	android:label="ProfileActivityLabel"
-         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"
+         	/>
          <activity
         	android:name=".DialogBoxActivity"
          	android:label="Example Dialog Box"/>
