popup menus are complete.
toolbar buttons are clickable. to show the pressed button call buton.setSelected(true). and include toolbar_only.xml to put tool bar on top of layout. 

include navbar_only to put navigation bar on top pf a layout.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,11 +45,13 @@
          <activity
         	android:name=".HomepageActivity"
          	android:label="HomepageActivityLabel"
-         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"
+         	android:screenOrientation="portrait"/>
          <activity
         	android:name=".ProfileActivity"
          	android:label="ProfileActivityLabel"
-         	android:theme="@android:style/Theme.Black.NoTitleBar"/>
+         	android:theme="@android:style/Theme.Black.NoTitleBar"
+         	/>
          <activity
         	android:name=".DialogBoxActivity"
          	android:label="Example Dialog Box"/>
