* Made the GDDiscoverMe activity not stored on stack.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:name=".GDDiscoverMeActivity"
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.NoTitleBar"
+            android:noHistory="true"
             android:screenOrientation="portrait">
             
             <intent-filter>
