maintaining Application state,adding a friend should insert an entry into the Friend’s list added Pending Request and Pending response types in friend types implemented pages for them in profile added delete friend button for friend profile

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,8 +10,11 @@
     
       <!--  (culim) Map View Stuff -->
 	
+	
+	
     
     <application
+        android:name=".StateManager" 
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
