List of locations with indication of food, quiet, and IT. Three locations: Stata cafe, 32G-575, and 34-301 EventLocation Class as well as activity and all necessary images. **Not hooked up to anything**

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,7 +47,9 @@
         <activity
         	android:name=".ViewParticipantsListActivity"
          	android:label="ViewParticipantsListActivityLabel"/>
-         
+         <activity
+             android:name = ".SuggestLocationsActivity"
+             android:label="SuggestLocationsLabel"/>
          <activity
         	android:name=".HomepageActivity"
          	android:label="HomepageActivityLabel"
